@@ -52,6 +52,16 @@
             <artifactId>pdfbox</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>jbig2-imageio</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jai-imageio</groupId>
+            <artifactId>jai-imageio-core</artifactId>
+            <version>1.4.0</version>
+        </dependency>
         
         <!-- Test Dependencies -->
         <dependency>
@@ -115,7 +125,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <additionalOptions>--enable-native-access=ALL-UNNAMED</additionalOptions>
+                    <release>25</release>
                 </configuration>
             </plugin>
             <plugin>
